# model/domain/facility.go
@@ -1,0 +1,8 @@
+package domain
+
+type Facility struct {
+	Id           int64
+	Name         string
+	FacilityType FacilityType
+	BaseDomain
+}
